# ekto

./: .gitignore  Cargo.toml  README.md  flake.nix
ekto-lib/: package-lock.json  package.json  tsconfig.json  vite.config.js
ekto-lib/src/: index.ts
src/: approve_key.rs  holochain_external.rs  inject.rs  main.rs  ui.rs
