[package]
name = "ekto"
version = "0.1.0"
edition = "2021"

[dependencies]
mr_bundle = "0.3.4"
holochain_types = "0.3.4"
holochain_conductor_api = "0.3.4"
holochain_client = { version = "0.5.3", default-features = false }
warp = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
tokio = "1"
zip = "2"
proc-ctl = "0.4.0"
html5ever = "0.29"
markup5ever_rcdom = "0.5.0-unofficial"
serde = "1"
tracing-subscriber = "0.3"
rand = { version = "0.8", features = ["std", "std_rng"] }
sha3 = "0.10"
hex = "0.4"
